# wimd

./: Cargo.toml  Readme.md  example.md
src/: ast.rs  document.rs  main.rs
